[gd_scene load_steps=9 format=3 uid="uid://cl0lqfeevxh5y"]

[ext_resource type="Script" path="res://Scripts/ShopKeeper.gd" id="1_0lx6e"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://Map(Seperate)/Assets/Assets/Font/Schr√∂dinger.ttf" id="2_0lu3k"]
[ext_resource type="Texture2D" uid="uid://b6wahuhdh6mbg" path="res://Map(Seperate)/Assets/Assets/Icons/shard_01i.png" id="3_6jy2r"]
[ext_resource type="Texture2D" uid="uid://dkxeo1rfa7mgm" path="res://Map(Seperate)/Assets/Assets/Icons/potion_03c.png" id="4_u860t"]
[ext_resource type="Texture2D" uid="uid://beltwhfoshjp" path="res://Map(Seperate)/Assets/Assets/Icons/potion_03b.png" id="5_jda10"]
[ext_resource type="Texture2D" uid="uid://d3sy8jjav3k31" path="res://Map(Seperate)/Assets/Assets/Icons/coin_03d.png" id="6_73pnv"]
[ext_resource type="Texture2D" uid="uid://4oei17yroj0t" path="res://Map(Seperate)/Assets/Assets/NPC/NPC's.png" id="7_cjqbt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqfua"]
size = Vector2(24, 21)

[node name="ShopKeeper" type="Node2D"]
process_mode = 3
script = ExtResource("1_0lx6e")

[node name="ShopMenu" type="Popup" parent="."]
size = Vector2i(320, 180)

[node name="ColorRect" type="ColorRect" parent="ShopMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.345098, 0.0980392, 0.160784, 1)

[node name="Label" type="Label" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 10.0
offset_right = 24.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.164706, 0.0313726, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 20
text = "Shop"
uppercase = true

[node name="Ammo" type="ColorRect" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_top = 60.0
offset_right = -3.0
offset_bottom = 85.0
grow_horizontal = 2
color = Color(0.247059, 0.0588235, 0.105882, 1)

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect/Ammo"]
position = Vector2(15, 12)
texture = ExtResource("3_6jy2r")

[node name="Label" type="Label" parent="ShopMenu/ColorRect/Ammo"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -4.5
offset_right = 113.0
offset_bottom = 8.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.94902, 0.65098, 0.698039, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "Ammo x 3 ($10)"
uppercase = true

[node name="PurchaseAmmo" type="Button" parent="ShopMenu/ColorRect/Ammo"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -9.0
offset_right = -4.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.467521, 0.14653, 0.227638, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "BUY"

[node name="Health" type="ColorRect" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_top = 60.0
offset_right = -5.0
offset_bottom = 85.0
grow_horizontal = 0
color = Color(0.247208, 0.0602025, 0.107795, 1)

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect/Health"]
position = Vector2(15, 12)
texture = ExtResource("4_u860t")

[node name="Label" type="Label" parent="ShopMenu/ColorRect/Health"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -17.0
offset_right = 156.0
offset_bottom = 6.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.949009, 0.651263, 0.699038, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "Health x 1 ($5)"
uppercase = true

[node name="PurchaseHealth" type="Button" parent="ShopMenu/ColorRect/Health"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -9.0
offset_right = -4.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.467521, 0.14653, 0.227638, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "BUY"

[node name="Stamina" type="ColorRect" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_top = 95.0
offset_right = -3.0
offset_bottom = 120.0
grow_horizontal = 2
color = Color(0.247208, 0.0602025, 0.107795, 1)

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect/Stamina"]
position = Vector2(15, 12)
texture = ExtResource("5_jda10")

[node name="Label" type="Label" parent="ShopMenu/ColorRect/Stamina"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -17.0
offset_right = 168.0
offset_bottom = 6.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.949009, 0.651263, 0.699038, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "Stamina x 1 ($2)"
uppercase = true

[node name="PurchaseStamina" type="Button" parent="ShopMenu/ColorRect/Stamina"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -9.0
offset_right = -4.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.467521, 0.14653, 0.227638, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "BUY"

[node name="Close" type="Button" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "x"

[node name="CoinAmount" type="Label" parent="ShopMenu/ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -15.0
offset_right = 65.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.164706, 0.0313726, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_0lu3k")
theme_override_font_sizes/font_size = 10
text = "Coins : 0"
uppercase = true

[node name="Icon" type="Sprite2D" parent="ShopMenu/ColorRect"]
position = Vector2(10, 170)
texture = ExtResource("6_73pnv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("7_cjqbt")
hframes = 3
vframes = 3
frame = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 27.5)
shape = SubResource("RectangleShape2D_yqfua")

[connection signal="pressed" from="ShopMenu/ColorRect/Ammo/PurchaseAmmo" to="." method="_on_purchase_ammo_pressed"]
[connection signal="pressed" from="ShopMenu/ColorRect/Health/PurchaseHealth" to="." method="_on_purchase_health_pressed"]
[connection signal="pressed" from="ShopMenu/ColorRect/Stamina/PurchaseStamina" to="." method="_on_purchase_stamina_pressed"]
[connection signal="pressed" from="ShopMenu/ColorRect/Close" to="." method="_on_close_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
